COMP: mess in cmake

--- a/Utilities/otbossim/CMakeLists.txt
+++ b/Utilities/otbossim/CMakeLists.txt
@@ -140,8 +140,9 @@ IF(NOT OTB_DISABLE_UTILITIES_COMPILATION)
   ${ossim_imaging_SRCS}
   ${ossim_parallel_SRCS}
   ${ossim_elevation_SRCS}
-  )
-  TARGET_LINK_LIBRARIES(otbossim ${TIFF_LIBRARY} ${GEOTIFF_LIBRARY} ${JPEG_LIBRARY} ${OPENTHREADS_LIBRARY})
+  
+#  TARGET_LINK_LIBRARIES(otbossim ${GDAL_LIBRARY})#To make sure that gdal appear before geotiff
+#  TARGET_LINK_LIBRARIES(otbossim ${TIFF_LIBRARY} ${GEOTIFF_LIBRARY} ${JPEG_LIBRARY} ${OPENTHREADS_LIBRARY})
 
   IF(NOT OTB_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS otbossim
