COMP: fix the issue between gdal and geotiff... now ossim and itk remain

--- a/Utilities/otbossim/CMakeLists.txt
+++ b/Utilities/otbossim/CMakeLists.txt
@@ -139,10 +139,15 @@ IF(NOT OTB_DISABLE_UTILITIES_COMPILATION)
   ${ossim_projection_SRCS}
   ${ossim_imaging_SRCS}
   ${ossim_parallel_SRCS}
-  ${ossim_elevation_SRCS}
+  ${ossim_elevation_SRCS})
   
+  SET_TARGET_PROPERTIES(otbossim
+    PROPERTIES
+    LINK_INTERFACE_LIBRARIES ""
+  )
 #  TARGET_LINK_LIBRARIES(otbossim ${GDAL_LIBRARY})#To make sure that gdal appear before geotiff
-#  TARGET_LINK_LIBRARIES(otbossim ${TIFF_LIBRARY} ${GEOTIFF_LIBRARY} ${JPEG_LIBRARY} ${OPENTHREADS_LIBRARY})
+#  TARGET_LINK_LIBRARIES(otbossim  ${JPEG_LIBRARY} ${TIFF_LIBRARY} ${GEOTIFF_LIBRARY} ${OPENTHREADS_LIBRARY})
+  TARGET_LINK_LIBRARIES(otbossim ${OPENTHREADS_LIBRARY})
 
   IF(NOT OTB_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS otbossim
