--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -12,6 +12,10 @@ ENDIF( NOT OTB_USE_PQXX )
 
 
 ADD_LIBRARY(OTBCommon ${OTBCommon_SRCS})
+SET_TARGET_PROPERTIES(OTBCommon
+    PROPERTIES
+    LINK_INTERFACE_LIBRARIES ""
+)
 TARGET_LINK_LIBRARIES (OTBCommon ITKAlgorithms ITKStatistics ITKCommon otbconfigfile)
 IF(OTB_USE_MAPNIK)
     TARGET_LINK_LIBRARIES(OTBCommon ${MAPNIK_LIBRARY})
