--- a/Utilities/otbossimplugins/CMakeLists.txt
+++ b/Utilities/otbossimplugins/CMakeLists.txt
@@ -25,6 +25,8 @@ SET(ossimplugins_SOURCES
 
 ADD_LIBRARY(otbossimplugins ${ossimplugins_SOURCES} )
 #TARGET_LINK_LIBRARIES(otbossimplugins ${GDAL_LIBRARY} otbossim)
+TARGET_LINK_LIBRARIES(otbossimplugins otbossim)
+
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(otbossimplugins PROPERTIES ${OTB_LIBRARY_PROPERTIES})
 ENDIF(OTB_LIBRARY_PROPERTIES)
