--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -30,10 +30,11 @@ ENDIF(OTB_COMPILE_JPEG2000)
 
 
 ADD_LIBRARY(OTBIO ${OTBIO_SRCS})
-  SET_TARGET_PROPERTIES(OTBIO
-    PROPERTIES
-    LINK_INTERFACE_LIBRARIES ""
-  )
+#Apparently not supported by opensolaris at least
+#  SET_TARGET_PROPERTIES(OTBIO
+#    PROPERTIES
+#    LINK_INTERFACE_LIBRARIES ""
+#  )
 TARGET_LINK_LIBRARIES (OTBIO ${GDAL_LIBRARY} ${OGR_LIBRARY} ${JPEG_LIBRARY} ${TIFF_LIBRARY} ${GEOTIFF_LIBRARY} OTBCommon)
 TARGET_LINK_LIBRARIES (OTBIO otbossim otbossimplugins ITKIO ITKCommon dxf otbkml)
 
