--- a/Code/Testing/CMakeLists.txt
+++ b/Code/Testing/CMakeLists.txt
@@ -3,10 +3,10 @@
 FILE(GLOB OTBTesting_SRCS "*.cxx" )
 
 ADD_LIBRARY(OTBTesting ${OTBTesting_SRCS})
-SET_TARGET_PROPERTIES(OTBTesting
-    PROPERTIES
-    LINK_INTERFACE_LIBRARIES ""
-)
+#SET_TARGET_PROPERTIES(OTBTesting
+#    PROPERTIES
+#    LINK_INTERFACE_LIBRARIES ""
+#)
 TARGET_LINK_LIBRARIES (OTBTesting OTBBasicFilters OTBIO OTBCommon ITKBasicFilters)
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBTesting PROPERTIES ${OTB_LIBRARY_PROPERTIES})
