DOC:add simple geospatial example

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -35,6 +35,10 @@ IF(OTB_USE_PATENTED)
   ADD_SUBDIRECTORY( Patented )
 ENDIF(OTB_USE_PATENTED)
 
+IF(OTB_USE_PQXX)
+        ADD_SUBDIRECTORY(GeospatialAnalysis)
+ENDIF(OTB_USE_PQXX)
+
 #Recopie du fichier README.txt dans l'arborescence BINARY
 IF( EXISTS ${OTB_BINARY_DIR}/Examples/README.txt )
 ELSE( EXISTS ${OTB_BINARY_DIR}/Examples/README.txt )
@@ -81,7 +85,7 @@ ELSE(OTB_BINARY_DIR)
         ADD_SUBDIRECTORY(Fusion)
         ADD_SUBDIRECTORY(Tutorials)
         ADD_SUBDIRECTORY(Markov)
-	    ADD_SUBDIRECTORY(OBIA)
+	ADD_SUBDIRECTORY(OBIA)
 
     IF(OTB_USE_VISU_GUI)
         ADD_SUBDIRECTORY(Visu)
@@ -90,6 +94,10 @@ ELSE(OTB_BINARY_DIR)
     IF(OTB_USE_PATENTED)
         ADD_SUBDIRECTORY( Patented )
     ENDIF(OTB_USE_PATENTED)
+
+    IF(OTB_USE_PQXX)
+	ADD_SUBDIRECTORY(GeospatialAnalysis)
+    ENDIF(OTB_USE_PQXX)
   ELSE(OTB_FOUND)
     MESSAGE("OTB not found.  Please set OTB_DIR")
   ENDIF(OTB_FOUND)
