ENH: Affine transfrom least square estimation

--- a/Testing/Code/Projections/CMakeLists.txt
+++ b/Testing/Code/Projections/CMakeLists.txt
@@ -367,6 +367,33 @@ ADD_TEST(prTvGCPsToRPCSensorModelImageFilterWithoutDEM ${PROJECTIONS_TESTS2}
 
 ENDIF(OTB_DATA_USE_LARGEINPUT)
 
+ADD_TEST(prTuLeastSquareAffineTransformEstimatorNew ${PROJECTIONS_TESTS2}
+         otbLeastSquareAffineTransformEstimatorNew)
+
+ADD_TEST(prTvLeastSquareAffineTransformEstimator ${PROJECTIONS_TESTS2}
+   --compare-ascii ${NOTOL} 
+         ${BASELINE_FILES}/otbLeastSquareAffineTransformEstimatorOutput.txt
+         ${TEMP}/otbLeastSquareAffineTransformEstimatorOutput.txt
+         otbLeastSquareAffineTransformEstimator
+	 ${TEMP}/otbLeastSquareAffineTransformEstimatorOutput.txt
+	 840 394 783 7907 9925 11943
+	 798 911 197 5831 7738 9645
+	 335 768 277 5356 6737 8118
+	 553 477 628 6867 8526 10185
+	 364 513 952 9090 10920 12750
+	 916 635 717 8485 10754 13023
+	 141 606 16 2687 3451 4215
+	 242 137 804 6428 7612 8796
+	 156 400 129 2669 3355 4041
+	 108 998 218 5636 6961 8286
+	 512 839 612 8162 10126 12090
+	 296 637 524 6522 7980 9438
+	 493 972 292 6435 8193 9951
+	 771 526 769 8268 10335 12402
+	 400 891 283 5955 7530 9105
+	 352 807 919 10023 12102 14181
+)
+
 #========================= TESTS SINGAPOUR ===============================
 
 #SET(EMMANUELDATA ${OTB_DATA_ROOT}/Emmanuel/Singapour/000000173549_01_P001_MUL)
@@ -542,6 +569,8 @@ otbOrthoRectificationFilterWithDEM.cxx
 otbOrthoRectificationMonoThreadFilter.cxx
 otbGCPsToRPCSensorModelImageFilterNew.cxx
 otbGCPsToRPCSensorModelImageFilterWithoutDEM.cxx
+otbLeastSquareAffineTransformEstimatorNew.cxx
+otbLeastSquareAffineTransformEstimator.cxx
 )
 
 SET(Projections_SRCS3
